[package]
name = "prom-http-exporter"
version = "0.1.1"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
log = "0.4.22"
reqwest = { version = "0.12.9", default_features = false, features = ["rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
