[package]
name = "prom-http-exporter"
version = "0.2.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
log = "0.4.26"
reqwest = { version = "0.12.12", default_features = false, features = ["rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
