[package]
name = "prom-http-exporter"
version = "0.2.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
log = "0.4.27"
reqwest = { version = "0.12.15", default_features = false, features = ["rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.9.2"
